publish and delete article